# apollo

./: .editorconfig  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/apollo/: app.py
src/apollo/common/: brain_region.py  impulse.py  impulse_status.py  impulse_type.py  prompt.py
src/apollo/cortex/: cortex.py
src/apollo/event_bus/: event.py  event_bus.py
src/apollo/hippocampus/: hippocampus.py
src/apollo/infrastructure/logger/: loguru_logger.py
src/apollo/nervous_system/: nervous_system.py
src/apollo/peripheral_nervous_system/: peripheral_nervous_system.py
src/apollo/peripheral_nervous_system/domain/: peripheral_nervous_system.py
src/apollo/pns/: pns.py
src/apollo/prefrontal_cortex/: classifier.py  llama_classifier.py  prefrontal_cortex.py
src/apollo/prefrontal_cortex/adapters/: llama_embedded_model.py
src/apollo/prefrontal_cortex/domain/: prefrontal_cortex.py
src/apollo/prefrontal_cortex/embedded_model/: embedded_model.py  llama_embedded_model.py
src/apollo/prefrontal_cortex/entities/: prefrontal_cortex.py
src/apollo/prefrontal_cortex/infra/: llama_embedded_model.py
src/apollo/prefrontal_cortex/interfaces/: embedded_model.py
src/apollo/prefrontal_cortex/utils/: classify_system_prompt.py
src/apollo/shared/: artifact.py  impulse.py  prompt.py  task.py  task_type.py
src/apollo/shared/adapters/: loguru_logger.py
src/apollo/shared/entities/: impulse.py  impulse_type.py  prompt.py  task.py
src/apollo/shared/interfaces/: logger.py
src/apollo/thalamus/: thalamus.py
(+7 files in other folders)
