[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apollo"
version = "0.1.0"
description = "An AI model orchestration system."
authors = [ { name = "Vinícius Ferreira de Oliveira", email = "vinicius.ferreira22615@gmail.com" } ]
readme = "README.md"
dependencies = [
	"loguru",
	"requests"
]
